# py-earth

./: PyEarth examples.ipynb  README.md  clean.sh  setup.cfg  setup.py
.ipynb_checkpoints/: PyEarth examples-checkpoint.ipynb
src/pyearth/: __init__.py  _basis.c  _basis.pxd  _basis.pyx  _forward.c  _forward.pyx  _knot_search.c  _knot_search.pyx  _pruning.c  _pruning.pyx  _qr.c  _qr.pyx  _record.c  _types.c  _types.pyx  _util.c  _util.pxd  _util.pyx
src/pyearth.egg-info/: PKG-INFO  SOURCES.txt
test/: test_earth.py  test_export.py  test_knot_search.py  test_qr.py
