[metadata]
#description-file = description.md
license_files = LICENSE.txt
name = pyearth
author=Chenxu He
author_email=he.chenxu@gmail.com
description=A Python implementation of Jerome Friedman Multivariate Adaptive Regression Splines
#long_description=  file: README.md,
classifiers = 
    Intended Audience :: Developers
    Intended Audience :: Science/Research

[options]
package_dir = =src
packages = find:
[options.packages.find]
where =src

